check account balance, fetch trsansactions API
