# routes/account/account.js
@@ -58,7 +58,7 @@ accountRouter.post('/fund', verifyJWT, async (req, resp) => {
         const authHeader = req.headers.authorization
         const token = authHeader.split(' ')[1]
         let payload = jwt.verify(token, "6smhlntk6kjbictjd78llrlp2m")
-        console.log("{PAYLOAD",payload);
+        console.log("{PAYLOAD", payload);
         if (!payload) {
             return resp.status(403).json({ message: `UnAuthorized Request` })
         }
@@ -91,7 +91,7 @@ accountRouter.post('/fund', verifyJWT, async (req, resp) => {
                             .insert({
                                 'account_id': rows[0].id,
                                 'accountNumber': req.body.accountNumber,
-                                'amountDeposited': req.body.amountDeposited
+                                'amountDeposited': parseInt(req.body.amountDeposited)
 
                             })
 
@@ -112,7 +112,7 @@ accountRouter.post('/fund', verifyJWT, async (req, resp) => {
 
 
 // checking  account balance
-accountRouter.get('/checkbalance', verifyJWT, async (req, resp) => {
+accountRouter.get('/checkbalance/:user_id', verifyJWT, async (req, resp) => {
     try {
         const authHeader = req.headers.authorization
         const token = authHeader.split(' ')[1]
@@ -127,15 +127,54 @@ accountRouter.get('/checkbalance', verifyJWT, async (req, resp) => {
 
         try {
             //Run  a select statement to establish if a account exists
-            kknex
-            .from('account')
-            .select('accountNumber', 'accountBalance')
-            .where({userId: req.body.user_id})
-            .then( rows => {
-                resp.status(200).json(rows)
-            })
+            knexDb
+                .from('account')
+                .select('accountNumber', 'accountBalance')
+                .where({ user_id: req.body.user_id })
+                .then(rows => {
+                    console.log(rows)
+                    console.log(typeof (rows))
+                    resp.status(200).json(rows)
+                })
 
-            
+
+        } catch (error) {
+            resp.status(500).json({ message: "Error", error: error.message })
+        }
+
+    } catch (error) {
+        resp.status(500).json({ message: "Error", error: error.message })
+    }
+})
+
+// get account account transctions
+
+accountRouter.get('/account_transactions/:accNo', verifyJWT, async (req, resp) => {
+    try {
+        const authHeader = req.headers.authorization
+        const token = authHeader.split(' ')[1]
+        let payload = jwt.verify(token, "6smhlntk6kjbictjd78llrlp2m")
+        if (!payload) {
+            return resp.status(403).json({ message: `UnAuthorized Request` })
+        }
+        let accountData = req.body
+        req.userId = payload.subject
+        req.body.user_id = req.userId
+
+
+        try {
+            //Run  a select statement to establish if a account exists
+            knexDb
+                .from('account')
+                .select('*')
+                .leftJoin('transactions', 'account.id', 'transactions.account_id')
+                .then(rows => {
+                    console.log(rows)
+                    console.log(typeof (rows))
+                    resp.status(200).json(rows)
+                })
+
+
         } catch (error) {
             resp.status(500).json({ message: "Error", error: error.message })
         }
